[package]
name = "pongrw"
version = "0.2.0"
edition = "2024"

[profile.release]
lto = "thin"

[dependencies]
#firewheel = "0.10.0"
macroquad = {version="0.4.14",features=["audio"]}
wasm-bindgen = "0.2.114"

[package.metadata.macroquad]
# 强制音频采样率为44.1kHz（默认可能是22050Hz）
audio_sample_rate = 44100
# 位深设为16位
audio_bit_depth = 32
