[package]
name = "pongrw"
version = "0.2.2"
authors = ["Blueice1437 <y1658623870@163.com>"]
edition = "2024"
build = "src/build.rs"

[profile.release]
lto = "thin"

[dependencies]
macroquad = {version="0.4.14",features=["audio"]}
wasm-bindgen = "0.2.114"

[package.metadata.macroquad]
# 强制音频采样率为44.1kHz（默认可能是22050Hz）
audio_sample_rate = 44100
# 位深设为16位
audio_bit_depth = 32

[build-dependencies]
image = "0.24"
