[package]
name = "pongrw"
version = "0.2.4"
authors = ["Blueice1437 <y1658623870@163.com>"]
edition = "2024"
build = "src/build.rs"

[profile.release]
lto = "thin"

[dependencies]
macroquad = {version="0.4.14",features=["audio"]}
#wasm-bindgen = "0.2.117"

[package.metadata.macroquad]
# 强制音频采样率为44.1kHz（默认可能是22050Hz）
audio_sample_rate = 44100
# 位深设为16位
audio_bit_depth = 32

[build-dependencies]
embed-resource = "3.0.8"
image = "0.24"
#winres = "0.1.12"

#[package.metadata.winres]
#Icon = "assets/icon.ico"

